tests/parser/statement_assign_err9.mtp
begin
	(*Incomplete multiplying operator*)
	(*assignment statement: with terms*)
	something := * 2;
end
.